added email verification

--- a/index.html
+++ b/index.html
@@ -132,20 +132,24 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="special" /></li>
-									</ul>
-								</form>
+								<form action="https://formspree.io/youremailaddresshere@gmail.com" method="POST">
+		                        <div class="field half first">
+		                            <input type="text" class="form-control" placeholder="Your Name" id="name" required="" data-validation-required-message="Please enter your name" name="name"> 
+		                            <p class="help-block text-danger"></p>
+		                        </div>
+		                        <div class="field half">
+		                            <input type="email" class="form-control" placeholder="Your Email" id="email" required="" data-validation-required-message="Please enter your email" name="_replyto"> 
+		                            <p class="help-block text-danger"></p>
+		                        </div>
+		                        <div class="field">
+		                                <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required="" data-validation-required-message="Please leave a message" name="message"></textarea>
+		                            <p class="help-block text-danger"></p>
+		                        </div>
+		                        <div class="actions">
+		                            <div id="success"></div>
+		                                <button type="submit" class="btn btn-lg btn-black"><i class="fa fa-paper-plane-o" aria-hidden="true"></i>Send Message</button>
+		                        </div>
+		                    </form>
 							</section>
 							<section>
 								<h2>Follow</h2>
