--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<div class="inner">
 							<section>
 								<h2>Get in touch</h2>
-								<form action="https://formspree.io/youremailaddresshere@gmail.com" method="POST">
+								<form action="https://formspree.io/jordanburton35@yahoo.com" method="POST">
 		                        <div class="field half first">
 		                            <input type="text" class="form-control" placeholder="Your Name" id="name" required="" data-validation-required-message="Please enter your name" name="name"> 
 		                            <p class="help-block text-danger"></p>
