--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="https://api-challenge-5aaac.firebaseapp.com/">
+										<h2>Ajax Challenge</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Example using Ajax to pull information from an API database</p>
 										</div>
 									</a>
 								</article>
