--- a/index.html
+++ b/index.html
@@ -54,8 +54,11 @@
 						<div class="inner">
 							<header>
 								<h1>Who I am</h1>
-								<p>I am 20 years old, and currently attending 1150 Academy here in fishers. Here are a couple of projects that I have worked on.</p>
+								<p>My name is Jordan Burton, I am 20 years old, and currently attending 1150 Academy here in fishers.  I have a deep interest in javascript and coding in general.  I coded for a little bit in python back at Carmel High School, and was excited to find this opportunity here at 1150.
+
+								Here are a couple of projects that I have worked on.</p>
 							</header>
+							<h1>My Projects</h1>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
@@ -98,28 +101,6 @@
 										<h2>Ajax Challenge</h2>
 										<div class="content">
 											<p>Example using Ajax to pull information from an API database</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
