--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<div class="inner">
 							<header>
 								<h1>Who I am</h1>
-								<p>My name is Jordan Burton, I am 20 years old, and currently attending 1150 Academy here in fishers.  I have a deep interest in javascript and coding in general.  I coded for a little bit in python back at Carmel High School, and was excited to find this opportunity here at 1150.
+								<p>My name is Jordan Burton, I am 20 years old, and currently attending Eleven Fifty Academy here in fishers.  I have a deep interest in javascript and coding in general.  I coded for a little bit in Python back at Carmel High School, and was excited to find this opportunity here at Eleven Fifty.
 
 								Here are a couple of projects that I have worked on.</p>
 							</header>
